--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terangawork-backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.2",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
-    "express": "^4.17.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.0.0",
-    "stripe": "^8.67.0"
+    "mongoose": "^8.7.1",
+    "socket.io": "^4.8.0",
+    "stripe": "^8.222.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
